# vlm-extract

./: .gitignore  README.md  env.example  pyproject.toml
examples/: basic_usage.py  extract_text.py
tests/: __init__.py  conftest.py  test_config.py  test_core.py  test_core_integration.py  test_cross_provider_compatibility.py  test_document_processor.py  test_ollama_integration.py  test_openai_integration.py  test_openai_real_image.py  test_pdf_smart_processing.py  test_pdf_support.py  test_utils.py
vlm_extract/: __init__.py  config.py  core.py  document_processor.py  pdf_processor.py  utils.py
vlm_extract/providers/: __init__.py  base.py  ollama.py  openai.py
